added contribution.md file and updated readme.md file
added prettier

updated the contribution file with formatter

added the esLint

added the esLint and recommendation

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Main Page</title><link rel="stylesheet" href="../style.css"></head>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Main Page</title>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <a href="Silver Blaze.html"> Silver Blaze.html </a>
-<br><a href="The Adventure of the Six Napoleans.html"> The Adventure of the Six Napoleans.html </a>
-<br><a href="The Adventure of the Speckled Band.html"> The Adventure of the Speckled Band.html </a>
-<br><a href="The Naval Treaty.html"> The Naval Treaty.html </a>
-<br><a href="The Red Headed League.html"> The Red Headed League.html </a>
-<br>
-</body></html>
+    <br /><a href="The Adventure of the Six Napoleans.html">
+      The Adventure of the Six Napoleans.html
+    </a>
+    <br /><a href="The Adventure of the Speckled Band.html">
+      The Adventure of the Speckled Band.html
+    </a>
+    <br /><a href="The Naval Treaty.html"> The Naval Treaty.html </a> <br /><a
+      href="The Red Headed League.html"
+    >
+      The Red Headed League.html
+    </a>
+    <br />
+  </body>
+</html>
